
	* NEWS: Document status of hppa64-hpux support.

2007-10-24  Pedro Alves  <pedro_alves@portugalmail.pt>

	PR gdb/2341
	* sol-thread.c (sol_thread_fetch_registers): Work around gcc 3.4
	alias warning bug.

2007-10-23  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/2336
	* configure.ac: Modify $LIBINTL before the BFD check.
	* configure: Regenerated.

2007-10-16  Daniel Jacobowitz  <dan@codesourcery.com>

	* mi/mi-main.c (captured_mi_execute_command): Clear mi_error_message
	after freeing it.

2007-10-13  Joel Brobecker  <brobecker@adacore.com>

	* solib-target.c (solib_target_parse_libraries)
	[HAVEHAVE_LIBEXPAT not defined]: Fix thinko in return type.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.0.20071010-cvs.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.7 released.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.7.

2007-10-09  Daniel Jacobowitz  <dan@codesourcery.com>

	* solib-svr4.c (enable_break): Add the dynamic linker also if
	auxv succeeds.

2007-10-08  Pedro Alves  <pedro_alves@portugalmail.pt>

	Revert:
	2007-08-10  Michael Snyder  <msnyder@access-company.com>

	* stabsread.c (read_huge_number): Attempt to compute value before
	values that it depends on.

2007-10-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote.c (get_offsets): Only call free_symfile_segment_data if
	data was allocated.

2007-10-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention XML support for M68K in GDB 6.7.

2007-10-02  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-tdep.c (s390_regset_from_core_section): Allow excess section
	size to enable bi-arch generate-core-file support.

2007-10-02  Markus Deuling  <deuling@de.ibm.com>

	* spu-tdep.c (info_spu_signal_command): Fix output for SPU signal.

2007-09-29  Daniel Jacobowitz  <dan@codesourcery.com>
